@@ -2,6 +2,7 @@
 obrotate = rotate a tortional bond matched by a SMART pattern
 Copyright (C) 2003 Fabien Fontaine
 Some portions Copyright (C) 2004-2005 Geoffrey R. Hutchison
+Some portions Copyright (C) 2008 Tim Vandermeersch
  
 This file is part of the Open Babel project.
 For more information, see <http://openbabel.sourceforge.net/>
@@ -47,7 +48,6 @@ using namespace OpenBabel;
 //! \brief Set a tortional bond to a given angle
 int main(int argc,char **argv)
 {
-
   char *program_name=NULL;
   OBAtom *a1, *a2, *a3, *a4;
   unsigned int smartor[4]= {0,0,0,0};// atoms of the tortional in the SMART
@@ -56,129 +56,108 @@ int main(int argc,char **argv)
   unsigned int i, t, errflg = 0;
   int c;
   string err;
-  bool changeAll = false; // default to only change the last matching torsion
+  //bool changeAll = false; // default to only change the last matching torsion
 
-  program_name= argv[0];
+  program_name = argv[0];
   // parse the command line -- optional -a flag to change all matching torsions
-  if (argc < 8 || argc > 9)
-    {
-      errflg++;
+  if (argc < 8 || argc > 9) {
+    errflg++;
+  } else {
+    FileIn = argv[2];
+    Pattern = argv[1];
+    // Read the atom position
+    for(i=3, t=0; i<7; ++i, ++t) {
+      c = sscanf(argv[i], "%u", &smartor[t]);
+      if (c != 1) {
+        break;
+        errflg++;
+      }
     }
-  else
-    {
-      FileIn = argv[2];
-      Pattern = argv[1];
-      // Read the atom position
-      for(i=3, t=0; i<7; ++i, ++t)
-        {
-          c = sscanf(argv[i], "%u", &smartor[t]);
-          if (c != 1)
-            {
-              break;
-              errflg++;
-            }
-        }
-      c = sscanf(argv[7], "%f", &angle);
-    }
+    c = sscanf(argv[7], "%f", &angle);
+  }
 
-  if (errflg)
-    {
-      err = "Usage: ";
-      err += program_name;
-      err += " \"PATTERN\" <filename> <atom1> <atom2> <atom3> <atom4> <angle> \n";
-      ThrowError(err);
-      exit(-1);
-    }
-
+  if (errflg) {
+    cerr << "Usage: obrotate \"PATTERN\" <filename> <atom1> <atom2> <atom3> <atom4> <angle>" << endl;
+    exit(-1);
+  }
 
   // create pattern
   OBSmartsPattern sp;
   sp.Init(Pattern);
-  if (sp.NumAtoms() < 4)
-    {
-      err = program_name;
-      err += ": the number of atoms in the SMART pattern must be higher than 3\n";
-      ThrowError(err);
+  if (sp.NumAtoms() < 4) {
+    cerr << "obrotate: The number of atoms in the SMART pattern must be higher than 3." << endl;
+    exit(-1);
+  }
+
+  for (i=0; i<4; ++i) {
+    if ( smartor[i] < 1 || smartor[i] > sp.NumAtoms()) {
+      cerr << "obrotate: The torsional atom values must be between 1 and "
+           <<  sp.NumAtoms()
+           << ", which is the number of atoms in the SMART pattern." << endl;
       exit(-1);
     }
-
-  // Check the torsional atoms
-  // actually the atom can be bonded but not written consecutively in the SMART
-  // but this is the simplest way to ensure bonding
-  if( (smartor[1] +1) != smartor[2] )
-    {
-      err = program_name;
-      err += ": the atoms of the rotating bond must be bonded\n";
-      ThrowError(err);
-      exit(-1);
-    }
-  for (i=0; i<4; ++i)
-    {
-      if ( smartor[i] < 1 || smartor[i] > sp.NumAtoms())
-        {
-          cerr << program_name
-               << ": The torsional atom values must be between 1 and "
-               <<  sp.NumAtoms()
-               << ", which is the number of atoms in the SMART pattern.\n";
-          exit(-1);
-        }
-    }
-
+  }
 
   OBConversion conv; //NF...
   OBFormat* format = conv.FormatFromExt(FileIn);
-  if(!(format &&	conv.SetInAndOutFormats(format,format))) //in and out formats same
-    {
-      cerr << program_name << ": cannot read and/or write this file format!" << endl;
-      exit (-1);
-    } //...NF
+  if(!(format && conv.SetInAndOutFormats(format, format))) { //in and out formats same
+    cerr << "obrotate: cannot read and/or write this file format!" << endl;
+    exit (-1);
+  } //...NF
 
   //Open the molecule file
   ifstream ifs;
 
   // Read the file
   ifs.open(FileIn);
-  if (!ifs)
-    {
-      cerr << program_name << ": cannot read input file!" << endl;
-      exit (-1);
-    }
+  if (!ifs) {
+    cerr << "obrotate: cannot read input file!" << endl;
+    exit (-1);
+  }
 
-
-  OBMol mol; //NF
+  OBMol mol; 
   vector< vector <int> > maplist;      // list of matched atoms
   vector< vector <int> >::iterator m;  // and its iterators
   //   int tindex;
 
   // Set the angles
-  for (;;)
-    {
-      mol.Clear();
-      //NF      ifs >> mol;                   // Read molecule
-      conv.Read(&mol,&ifs); //NF
-      if (mol.Empty())
-        break;
+  for (;;) {
+    mol.Clear();
+    //NF      ifs >> mol;                   // Read molecule
+    conv.Read(&mol,&ifs); //NF
+    if (mol.Empty())
+      break;
 
-      if (sp.Match(mol))
-        {          // if match perform rotation
-          maplist = sp.GetUMapList(); // get unique matches
+    if (sp.Match(mol)) {          
+      // if match perform rotation
+      maplist = sp.GetUMapList(); // get unique matches
+      
+      if (maplist.size() > 1)
+        cerr << "obrotate: Found " << maplist.size() << " matches. Only last one will be rotated." << endl;
 
-          // look at all the mapping atom but save only the last one.
-          for (m = maplist.begin(); m != maplist.end(); ++m)
-            {
-              a1 = mol.GetAtom( (*m)[ smartor[0] - 1] );
-              a2 = mol.GetAtom( (*m)[ smartor[1] - 1] );
-              a3 = mol.GetAtom( (*m)[ smartor[2] - 1] );
-              a4 = mol.GetAtom( (*m)[ smartor[3] - 1] );
-              if (changeAll)
-                mol.SetTorsion(a1, a2, a3, a4, angle);                
-            }
+      // look at all the mapping atom but save only the last one.
+      for (m = maplist.begin(); m != maplist.end(); ++m) {
+        a1 = mol.GetAtom( (*m)[ smartor[0] - 1] );
+        a2 = mol.GetAtom( (*m)[ smartor[1] - 1] );
+        a3 = mol.GetAtom( (*m)[ smartor[2] - 1] );
+        a4 = mol.GetAtom( (*m)[ smartor[3] - 1] );
+        //if (changeAll)
+        //  mol.SetTorsion(a1, a2, a3, a4, angle * DEG_TO_RAD);                
+      }
 
-          mol.SetTorsion(a1, a2, a3, a4, angle);
-        }
-      //NF      cout << mol;
-      conv.Write(&mol,&cout); //NF
+      if ( !a2->IsConnected(a3) ) {
+        cerr << "obrotate: The atoms of the rotating bond must be bonded." << endl;
+        exit(-1);
+      }
+
+      mol.SetTorsion(a1, a2, a3, a4, angle * DEG_TO_RAD);
+    } else {
+      cerr << "obrotate: Found 0 matches for the SMARTS pattern." << endl;
+      exit(-1);
     }
+    //NF      cout << mol;
+    conv.Write(&mol,&cout); //NF
+  }
 
   return(0);
 }
@@ -200,7 +179,7 @@ int main(int argc,char **argv)
 * faster and in batch mode.
 * \n\n
 * The four atom IDs required are indexes into the SMARTS pattern, which starts
-* at atom 0 (zero). The angle supplied is in degrees. The two atoms used to set
+* at atom 1. The angle supplied is in degrees. The two atoms used to set
 * the dihedral angle \<atom1\> and \<atom4\> do not need to be connected 
 * to the atoms of the bond \<atom2\> and \<atom3\> in any way.
 *\n\n
